<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_goal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.jamietomlinson.iteration1goalpage.GoalActivity">

    <EditText
        android:id="@+id/goalNameInput"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_width="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true" />

    <TextView
        android:id="@+id/goalTextLabel"
        android:text="@string/goal_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginTop="15dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:text="@string/s"
        android:id="@+id/sundayBox"
        android:onClick="dayCheckBoxes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_below="@+id/repeat_view"
        android:layout_alignLeft="@+id/repeat_view" />

    <CheckBox
        android:text="@string/m"
        android:id="@+id/mondayBox"
        android:onClick="dayCheckBoxes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/sundayBox"
        android:layout_alignBottom="@+id/sundayBox"
        android:layout_toRightOf="@+id/sundayBox" />

    <CheckBox
        android:text="@string/t"
        android:id="@+id/tuesdayBox"
        android:onClick="dayCheckBoxes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/sundayBox"
        android:layout_alignBottom="@+id/sundayBox"
        android:layout_toRightOf="@+id/mondayBox" />

    <CheckBox
        android:text="@string/w"
        android:id="@+id/wednesdayBox"
        android:onClick="dayCheckBoxes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/sundayBox"
        android:layout_alignBottom="@+id/sundayBox"
        android:layout_toRightOf="@+id/tuesdayBox" />

    <CheckBox
        android:text="@string/r"
        android:id="@+id/thursdayBox"
        android:onClick="dayCheckBoxes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/sundayBox"
        android:layout_alignBottom="@+id/sundayBox"
        android:layout_toRightOf="@+id/wednesdayBox" />

    <CheckBox
        android:text="@string/f"
        android:id="@+id/fridayBox"
        android:onClick="dayCheckBoxes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/sundayBox"
        android:layout_alignBottom="@+id/sundayBox"
        android:layout_centerHorizontal="true"
        android:layout_toRightOf="@+id/thursdayBox" />

    <CheckBox
        android:text="@string/s"
        android:id="@+id/saturdayBox"
        android:onClick="dayCheckBoxes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/sundayBox"
        android:layout_alignBottom="@+id/sundayBox"
        android:layout_toRightOf="@+id/fridayBox" />

    <Spinner
        android:id="@+id/reminderSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/remind_view"
        android:layout_alignEnd="@id/saturdayBox"
        android:layout_centerHorizontal="true"
        android:layout_alignRight="@id/saturdayBox" />


    <CheckBox
        android:id="@+id/all_day_box"
        android:text="@string/all_day_string"
        android:onClick="allDayCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/duration_text"
        android:layout_toLeftOf="@+id/tuesdayBox"
        android:layout_toStartOf="@+id/tuesdayBox" />

    <TextView
        android:id="@+id/setStartTime"
        android:text="click_start"
        android:layout_width="wrap_content"
        android:onClick="onSetStartTimeClick"
        android:layout_height="wrap_content"
        android:layout_below="@+id/all_day_box"
        android:layout_toRightOf="@+id/all_day_box"
        android:layout_toEndOf="@+id/all_day_box" />

    <TextView
        android:id="@+id/setEndTime"
        android:text="end_click"
        android:layout_width="wrap_content"
        android:onClick="onSetEndTimeClick"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/endTimeLabel"
        android:layout_alignBottom="@+id/endTimeLabel"
        android:layout_toRightOf="@id/endTimeLabel"
        android:layout_marginLeft="17dp"
        android:layout_marginStart="17dp" />


    <Spinner
        android:id="@+id/frequencySpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/setFrequencyLabel"
        android:layout_alignLeft="@+id/reminderSpinner"/>

    <TextView
        android:id="@+id/duration_text"
        android:text="@string/duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_below="@+id/goalNameInput"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/remind_view"
        android:text="@string/remind_me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_below="@+id/frequencySpinner"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/startTimeLabel"
        android:text="@string/start_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/all_day_box"
        android:layout_alignRight="@+id/remind_view"
        android:layout_alignEnd="@+id/remind_view" />

    <TextView
        android:id="@+id/endDateLabel"
        android:text="End Date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/startDateTextLabel"
        android:layout_alignLeft="@+id/startDateTextLabel"
        android:layout_alignStart="@+id/startDateTextLabel"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/endTimeLabel"
        android:text="@string/end_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/endDateLabel"
        android:layout_alignBottom="@+id/endDateLabel"
        android:layout_alignLeft="@+id/startTimeLabel"
        android:layout_alignStart="@+id/startTimeLabel" />

    <TextView
        android:id="@+id/repeat_view"
        android:text="@string/repeat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/endTimeLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="13dp" />

    <TextView
        android:id="@+id/setEndDate"
        android:text="click"
        android:onClick="onSetEndDateClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/endDateLabel"
        android:layout_alignBottom="@+id/endDateLabel"
        android:layout_toRightOf="@id/endDateLabel"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/setStartDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="click"
        android:onClick="onSetStartDateClick"
        android:layout_marginTop="16dp"
        android:layout_alignBaseline="@+id/startDateTextLabel"
        android:layout_alignBottom="@+id/startDateTextLabel"
        android:layout_toRightOf="@id/startDateTextLabel"/>

    <TextView
        android:id="@+id/startDateTextLabel"
        android:text="Start Date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/setStartTime"
        android:layout_alignBottom="@+id/setStartTime"
        android:layout_toRightOf="@+id/wednesdayBox"
        android:layout_toEndOf="@+id/wednesdayBox" />

    <TextView
        android:id="@+id/setFrequencyLabel"
        android:text="Frequency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sundayBox"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp" />

    <Button
        android:text="Add Goal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/endTimeLabel"
        android:layout_alignStart="@+id/endTimeLabel"
        android:layout_marginBottom="13dp"
        android:id="@+id/addGoalButton" />

    <Switch
        android:text="weightloss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reminderSpinner"
        android:layout_alignLeft="@+id/all_day_box"
        android:layout_alignStart="@+id/all_day_box"
        android:layout_marginTop="30dp"
        android:id="@+id/switch1" />

    <Switch
        android:text="stress-reducer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/switch1"
        android:layout_toRightOf="@+id/goalTextLabel"
        android:layout_toEndOf="@+id/goalTextLabel"
        android:id="@+id/switch2" />

    <Switch
        android:text="enjoyment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/switch2"
        android:layout_toRightOf="@+id/startDateTextLabel"
        android:layout_toEndOf="@+id/startDateTextLabel"
        android:id="@+id/switch3" />

</RelativeLayout>
